--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="keywords" content="репетитор, математика, информатика, обучение, уроки, онлайн">
   <meta name="description" content="Портфолио репетитора по математике и информатике. Индивидуальные уроки, подготовка к экзаменам, онлайн-занятия.">
   <title>Портфолио Репетитора по Математике и Информатике</title>
-  <link rel="stylesheet" href="outlines.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
@@ -23,7 +23,14 @@
   <section id="about">
     <article>
       <h2>Обо мне</h2>
-      <p>Здравствуйте! Меня зовут Чашков Леонид, я опытный <strong>репетитор</strong> по <em>математике</em> и <em>информатике</em>. Я помогаю ученикам достигать высоких результатов в учебе.</p>
+      <div class="about-content">
+        <p>
+          Здравствуйте! Меня зовут Чашков Леонид, я опытный
+          <strong>репетитор</strong> по <em>математике</em> и <em>информатике</em>.
+          Я помогаю ученикам достигать высоких результатов в учебе.
+        </p>
+        <img src="photo1.jpg" alt="Фото репетитора" />
+      </div>
     </article>
     <aside>
       <h3>Мои навыки</h3>
@@ -69,6 +76,7 @@
   </section>
 </main>
 <footer>
+  <section id="contact">
   <h2>Контакты</h2>
   <p>Email: lenechka_chashkov@mail.ru</p>
   <p>Телефон: +7 (902) 477-78-55</p>
@@ -85,6 +93,7 @@
 
     <button type="submit">Отправить</button>
   </form>
+  </section>
 </footer>
 </body>
 </html>
