lab3 Добавление таблицы. Настройка media screen.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <body>
 <header>
   <h1>Портфолио Репетитора</h1>
-  <nav>
+  <nav class="fixed-nav">
     <ul>
       <li><a href="#about">Обо мне</a></li>
       <li><a href="#subjects">Предметы</a></li>
       <li><a href="#success">Достижения</a></li>
       <li><a href="#contact">Контакты</a></li>
+      <li><a href="#price">Стоимость занятий</a></li>
     </ul>
   </nav>
 </header>
@@ -73,6 +74,34 @@
     <p>Формула успеха: Успех = Усилия<sup>2</sup> + Настойчивость<sup>2</sup></p>
     <p><strong>Важно:</strong> Регулярные занятия — ключ к успеху!</p>
     <p><del>Неэффективные методы обучения</del> <ins>Индивидуальный подход</ins></p>
+  </section>
+  <section id="price">
+    <h2>Стоимость занятий</h2>
+    <div class="table">
+      <div class="table-row header">
+        <div class="cell cell-header">Предмет</div>
+        <div class="cell cell-header">Класс</div>
+        <div class="cell cell-header">Время</div>
+      </div>
+
+      <div class="table-row">
+        <div class="cell first">Математика</div>
+        <div class="cell"><9</div>
+        <div class="cell">60</div>
+      </div>
+
+      <div class="table-row">
+        <div class="cell first">Информатика</div>
+        <div class="cell">9-10</div>
+        <div class="cell">90</div>
+      </div>
+
+      <div class="table-row">
+        <div class="cell first">Подготовка к эказменам</div>
+        <div class="cell">11</div>
+        <div class="cell">120</div>
+      </div>
+    </div>
   </section>
 </main>
 <footer>
