--- a/htmls/index.html
+++ b/htmls/index.html
@@ -5,18 +5,19 @@
   <meta name="keywords" content="репетитор, математика, информатика, обучение, уроки, онлайн">
   <meta name="description" content="Портфолио репетитора по математике и информатике. Индивидуальные уроки, подготовка к экзаменам, онлайн-занятия.">
   <title>Портфолио Репетитора по Математике и Информатике</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="/styles.css" />
+  <script src="/scripts/script.js" defer></script>
 </head>
 <body>
 <header>
   <h1>Портфолио Репетитора</h1>
   <nav class="fixed-nav">
-    <ul>
-      <li><a href="#about">Обо мне</a></li>
-      <li><a href="#subjects">Предметы</a></li>
-      <li><a href="#success">Достижения</a></li>
-      <li><a href="#contact">Контакты</a></li>
-      <li><a href="#price">Стоимость занятий</a></li>
+    <ul class="menu">
+      <li><a href="/htmls/about.html">Обо мне</a></li>
+      <li><a href="/htmls/subjects.html">Предметы</a></li>
+      <li><a href="/htmls/success.html">Достижения</a></li>
+      <li><a href="/htmls/contact.html">Контакты</a></li>
+      <li><a href="/htmls/price.html">Стоимость занятий</a></li>
     </ul>
   </nav>
 </header>
@@ -30,7 +31,7 @@
           <strong>репетитор</strong> по <em>математике</em> и <em>информатике</em>.
           Я помогаю ученикам достигать высоких результатов в учебе.
         </p>
-        <img src="photo1.jpg" alt="Фото репетитора" />
+        <img src="../photo1.jpg" alt="Фото репетитора" />
       </div>
     </article>
     <aside>
@@ -123,6 +124,7 @@
     <button type="submit">Отправить</button>
   </form>
   </section>
+  <div id="load-stats"></div>
 </footer>
 </body>
 </html>
