--- a/htmls/index.html
+++ b/htmls/index.html
@@ -5,7 +5,7 @@
   <meta name="keywords" content="репетитор, математика, информатика, обучение, уроки, онлайн">
   <meta name="description" content="Портфолио репетитора по математике и информатике. Индивидуальные уроки, подготовка к экзаменам, онлайн-занятия.">
   <title>Портфолио Репетитора по Математике и Информатике</title>
-  <link rel="stylesheet" type="text/css" href="/styles.css" />
+  <link rel="stylesheet" type="text/css" href="/htmls/styles.css" />
   <script src="/scripts/script.js" defer></script>
 </head>
 <body>
@@ -18,6 +18,7 @@
       <li><a href="/htmls/success.html">Достижения</a></li>
       <li><a href="/htmls/contact.html">Контакты</a></li>
       <li><a href="/htmls/price.html">Стоимость занятий</a></li>
+      <li><a href="/htmls/schedule.html">Расписание</a></li>
     </ul>
   </nav>
 </header>
