--- a/htmls/success.html
+++ b/htmls/success.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Портфолио Репетитора по Математике и Информатике</title>
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="/htmls/styles.css">
   <script src="/scripts/script.js" defer></script>
 </head>
 <body class="body">
