lab6 Добавлен раздел "Отзывы", куда подгружается информация

--- a/htmls/index.html
+++ b/htmls/index.html
@@ -19,6 +19,7 @@
       <li><a href="/htmls/contact.html">Контакты</a></li>
       <li><a href="/htmls/price.html">Стоимость занятий</a></li>
       <li><a href="/htmls/schedule.html">Расписание</a></li>
+      <li><a href="/htmls/feedback.html">Отзывы</a></li>
     </ul>
   </nav>
 </header>
