--- a/htmls/index.html
+++ b/htmls/index.html
@@ -11,7 +11,7 @@
 <body>
 <header>
   <h1>Портфолио Репетитора</h1>
-  <nav class="fixed-nav">
+  <nav id="fixed-nav" class="fixed-nav">
     <ul class="menu">
       <li><a href="/htmls/about.html">Обо мне</a></li>
       <li><a href="/htmls/subjects.html">Предметы</a></li>
@@ -128,5 +128,6 @@
   </section>
   <div id="load-stats"></div>
 </footer>
+<script src="/scripts/fix.js"></script>
 </body>
 </html>
