--- a/htmls/price.html
+++ b/htmls/price.html
@@ -15,6 +15,7 @@
             <li><a href="/htmls/success.html">Достижения</a></li>
             <li><a href="/htmls/contact.html">Контакты</a></li>
             <li><a href="/htmls/price.html">Стоимость занятий</a></li>
+            <li><a href="/htmls/feedback.html">Отзывы</a></li>
         </ul>
     </nav>
 </header>
