--- a/htmls/about.html
+++ b/htmls/about.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Портфолио Репетитора по Математике и Информатике</title>
-  <link rel="stylesheet" href="/htmls/styles.css">
-  <script src="/scripts/script.js" defer></script>
+  <link rel="stylesheet" href="styles.css">
+  <script src="../scripts/script.js" defer></script>
 </head>
 <body class="body">
 <header class="header">
