--- a/htmls/feedback.html
+++ b/htmls/feedback.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Отзывы</title>
-  <link rel="stylesheet" type="text/css" href="/htmls/styles.css" />
-  <script src="/scripts/api.js" defer></script>
-  <script src="/scripts/script.js" defer></script>
+  <link rel="stylesheet" type="text/css" href="styles.css" />
+  <script src="../scripts/api.js" defer></script>
+  <script src="../scripts/script.js" defer></script>
 </head>
 <body>
 <header>
