--- a/htmls/index.html
+++ b/htmls/index.html
@@ -5,8 +5,8 @@
   <meta name="keywords" content="репетитор, математика, информатика, обучение, уроки, онлайн">
   <meta name="description" content="Портфолио репетитора по математике и информатике. Индивидуальные уроки, подготовка к экзаменам, онлайн-занятия.">
   <title>Портфолио Репетитора по Математике и Информатике</title>
-  <link rel="stylesheet" type="text/css" href="/htmls/styles.css" />
-  <script src="/scripts/script.js" defer></script>
+  <link rel="stylesheet" type="text/css" href="styles.css" />
+  <script src="../scripts/script.js" defer></script>
 </head>
 <body>
 <header>
