--- a/htmls/schedule.html
+++ b/htmls/schedule.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Расписание</title>
-  <link rel="stylesheet" href="/htmls/styles.css">
-  <link rel="stylesheet" href="/htmls/calendar.css">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="calendar.css">
 </head>
 <body>
 <header class="header">
@@ -57,10 +57,10 @@
 
 </main>
 
-<script src="/scripts/scheduleMaker.js"></script>
-<script src="/scripts/script.js"></script>
+<script src="../scripts/scheduleMaker.js"></script>
+<script src="../scripts/script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/dayjs/dayjs.min.js"></script>
-<script src="/scripts/calendar.js"></script>
+<script src="../scripts/calendar.js"></script>
 </body>
 </html>
