--- a/htmls/about.html
+++ b/htmls/about.html
@@ -10,12 +10,13 @@
 <header class="header">
   <nav class="fixed-nav">
     <ul class="menu">
-      <li><a href="/htmls/about.html">Обо мне</a></li>
-      <li><a href="/htmls/subjects.html">Предметы</a></li>
-      <li><a href="/htmls/success.html">Достижения</a></li>
-      <li><a href="/htmls/contact.html">Контакты</a></li>
-      <li><a href="/htmls/price.html">Стоимость занятий</a></li>
-      <li><a href="/htmls/feedback.html">Отзывы</a></li>
+      <li><a href="about.html">Обо мне</a></li>
+      <li><a href="subjects.html">Предметы</a></li>
+      <li><a href="success.html">Достижения</a></li>
+      <li><a href="contact.html">Контакты</a></li>
+      <li><a href="price.html">Стоимость занятий</a></li>
+      <li><a href="schedule.html">Расписание</a></li>
+      <li><a href="feedback.html">Отзывы</a></li>
     </ul>
   </nav>
 </header>
